--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-table": "^8.21.3",
     "date-fns": "^4.1.0",
+    "i18next": "^25.6.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.64.0",
+    "react-i18next": "^16.1.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.3.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
